src/assets/main.css
@import './color.css';

@font-face {
    font-family: Geist;
    font-style: normal;
    font-weight: 100 900;
    font-display: swap;
    src: url('GeistVF.woff2') format('woff2');
}
:root {
    font-family: 'Geist', sans-serif;
    --color-text-light: #1d2021;
    --color-bg-light: #fff;
    --color-solid-light: #f2f2f2;
    --color-border-light: #333;
    --box-shadow-light-default: 0 0.6em 0.9em 0 #0000005e;
    --box-shadow-light-active: 0 0.2em 0.4em 0 #0000006b;

    --color-text-dark: #cfdde2;
    --color-bg-dark: #19191e;
    --color-solid-dark: #100d0e;
    --color-border-dark: #474340;
    --box-shadow-dark-default: 0 0 0 0.5em var(--color-solid-dark);
    --box-shadow-dark-active: 0 0 0 2px var(--color-border-dark);
}


@media (prefers-color-scheme: light) {
    :root {
        --color-text: var(--color-text-light);
        --color-bg: var(--color-bg-light);
        --color-solid: var(--color-solid-light);
        --color-border: var(--color-border-light);
        --color-shadow: var(--color-shadow-light);
        --color-primary: var(--dark-blue);
        --color-secondary: var(--dark-purple);
        --box-shadow-default: var(--box-shadow-light-default);
        --box-shadow-active: var(--box-shadow-light-active);
    }
}
@media (prefers-color-scheme: dark) {
    :root {
        --color-text: var(--color-text-dark);
        --color-bg: var(--color-bg-dark);
        --color-solid: var(--color-solid-dark);
        --color-border: var(--color-border-dark);
        --color-shadow: var(--color-shadow-light);
        --color-primary: var(--light-green);
        --color-secondary: var(--light-blue);
        --box-shadow-default: var(--box-shadow-dark-default);
        --box-shadow-active: var(--box-shadow-dark-active);
    }
}

@supports (font-variation-settings: normal) {
    :root {
        font-family: 'Geist', sans-serif;
        font-optical-sizing: auto;
    }
}

html {
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
}

*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    font-weight: normal;
}

body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background: var(--color-bg);
    color: var(--color-text);
    height: 100vh;
    height: -webkit-fill-available;
    transition:
        color 0.5s,
        background-color 0.5s;
    line-height: 1.6;
    font-family:
        'Geist',
        -apple-system,
        BlinkMacSystemFont,
        'Segoe UI',
        Roboto,
        'Helvetica Neue',
        Arial,
        sans-serif,
        'Apple Color Emoji',
        'Segoe UI Emoji',
        'Segoe UI Symbol';
    font-size: 16px;
    font-weight: 500;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

#app {
    height: 100vh;
    height: -webkit-fill-available;
    background: var(--color-bg);
    background: radial-gradient(
      farthest-corner var(--color-solid), 
      var(--color-bg)
    );
}

h1,
h2,
h3,
h4 {
    font-weight: 900;
}

h1 {
    font-size: 2.3em;
}
h2 {
    font-size: 2em;
}
h3 {
    font-size: 1.8em;
}
p {
    line-height: 2;
    margin-bottom: 1.6em;
}

button {
  font-family: inherit;
}

header h1 span {
    font-size: 0.5em;
}

.project-caption--title,
.ui nav ul li button,
.ui nav ul li label {
    display: block;
    font-size: 1.6em;
    text-align: center;
    line-height: 1.6;
}

.project-caption--title {
    font-size: 2em;
    font-weight: 800;
}

.ui nav ul li button {
    padding: 0.825em 1.1em;
}

.ui nav ul li label {
    padding: 0.5em 1.1em 0 1.1em;
}

.ui nav ul li small {
    display: block;
    padding: 0 1.1em 0.5em 1.1em;
    font-size: 0.9;
    line-height: 1;
    text-align: center;
}

main {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding: 0;
    min-height: 100vh;
    max-height: 100vh;
    overflow: hidden;
}

strong {
    font-weight: 700;
}

img {
    max-width: 100%;
    height: auto;
}

a {
    color: var(--color-primary);
}

label,
button,
.button,
nav ul li span {
    padding: 1rem;
    color: var(--color-text);
    border: none;
}

button,
.button {
    background: var(--color-bg);
    cursor: pointer;
    background-color: var(--color-bg);
    transition: all 0.15s ease-in-out;
}

button.small {
    padding: 0.5rem;
}

button svg,
.button svg {
    fill: var(--color-text);
    width: 2em;
    height: 2em;
}

button.active,
.button.active {
    color: var(--color-secondary);
}

button:hover,
.button:hover {
    background: var(--color-solid);
    color: var(--color-primary);
}

button:focus,
.button:focus {
    color: var(--color-secondary);
}

a.button {
    text-decoration: none;
}

.the-wall {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    white-space: nowrap;
    overflow-x: scroll;
    padding: 1em 0 1em 0;
    scrollbar-width: none;
    -ms-overflow-style: none;
 }

.the-wall header {
    max-width: 30vw;
    width: 100%;
    text-align: right;
    overflow: hidden;
}

.the-wall header h1 {
    display: block;
    margin: 0 0.1em;
    fill: var(--color-text);
    font-size: 9vw;
    font-weight: 600;
    white-space: normal;
    line-height: 1;
    hyphens: auto;
    overflow-wrap: break-word;
}

p,
input {
    font-size: 1em;
    hyphens: auto;
    word-wrap: break-word;
}

small {
    font-size: 0.8rem;
}

.row {
    position: static;
    display: flex;
    flex-flow: row nowrap;
    width: 100%;
    justify-content: flex-start;
    align-items: stretch;
    border-top: 1px solid var(--color-border);
    z-index: 2;
}

.slideDown-enter-active,
.slideDown-leave-active {
    transform: translate(0, 0);
    transition: transform 0.15s ease;
}

.slideDown-enter-from,
.slideDown-leave-to {
    transform: translate(0, 100vh);
}

.slideUp-enter-active,
.slideUp-leave-active {
    transform: translate(0, 0);
    transition: transform 0.15s ease;
}

.slideUp-enter-from,
.slideUp-leave-to {
    transform: translate(0, 100vh);
}

